--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,8 @@ dependencies {
     annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.0.0'
 
 
+        implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    
 
 
 
